hlx_statics/styles.css
/*
  Stop the page from drawing until we're ready
  We'll remove this class when we're done rendering blocks
*/
.helix-loading {
  display: none;
}

body {
  margin: 0;
}

header.main-header {
  grid-area: header;
  position: fixed;
  height: var(--spectrum-global-dimension-size-1000);
  left: 0;
  right: 0;
  background-color: var(--spectrum-global-color-gray-50);
  z-index: 2;
}

header nav.header-nav {
  height: 100%;
}

header div.header-link-container {
  display: flex;
  justify-content: center;
  height: 100%;
}

@media screen and (max-width: 1280px) {
  header div.header-link-container {
    justify-content: flex-end;
    margin-left: var(--spectrum-global-dimension-size-1600);
    width: calc(100vw - var(--spectrum-global-dimension-size-1600));
    white-space: nowrap;
    overflow-x: auto;
    overflow-x: overlay;
    overflow-y: hidden;
  }
  header div.link-container::-webkit-scrollbar {
    width: 0;
    background: transparent;
  }
}

header div.header-link-container {
  display: flex;
  justify-content: center;
  height: 100%;
}

header span.header-label {
  color: black;
  font-size: 16px;
  font-weight: 700;
  margin: auto;
}

header a.header-main-link {
  display: flex;
  position: absolute;
  left: 0;
  height: 100%;
  box-sizing: border-box;
  text-decoration: none;
  z-index: 1;
  outline: none;
  width: var(--spectrum-global-dimension-size-1600);
}

header a.header-main-link:hover, :focus {
  text-decoration: underline;
}

header ul.header-list {
  display: flex;
  margin: 0;
  padding: 0;
  list-style: none;
}

@media screen and (max-width: 1280px) {
  header ul.header-list {
    width: 100%;
  }
}

header li.header-list-item {
  display: flex;
  align-items: center;
}

header li.header-list-item:hover {
  background-color: hsla(0, 0%, 89%, .8);
  cursor: pointer;
}

header li.header-list-item a {
  display: flex;
  height: 100%;
  align-items: center;
  padding: 0 20px;
  font-size: 14px;
  font-weight: 700;
  color: black;
  text-decoration: none;
}

header li.header-list-item-button {
  padding: 0 20px;
}

header.global-header {
    position: sticky;
    top: 0;
		display: flex;
    height: 64px;
    padding-left: 32px;
    padding-right: 32px;
    border-bottom: 1px solid #eaeaea;

    color: #505050;
    text-decoration: none;
    background-color: #fff;
    z-index: 10;
}

header.global-header img.icon {
    height: 20px;
    width: 24px;
    margin-right: 8px;
}

header.global-header p {
    padding: 16px;
    display: flex;
    align-items: center;
    margin-top: 0;
    margin-bottom: 0;
}

header.global-header div:last-child {
  margin-left: auto;
  display: flex;
  align-items: center;
}


header.global-header ul {
    display: flex;
    list-style: none;
    margin-top: 0;
    margin-bottom: 0;
}

header.global-header ul li {
    display: flex;
    align-items: center;
    padding: 16px 48px 16px;
    border-left: 1px solid #eaeaea;

}

header.global-header ul li:last-child {
  border-right: 1px solid #eaeaea;
}

header.global-header ul li a {
    font-size: 14px;
    font-weight: 400;
    color: #505050;
    text-decoration: none;
}

footer {
  position: relative;
  padding-bottom: var(--spectrum-global-dimension-size-400);
  padding-top: var(--spectrum-global-dimension-size-600);
  background-color: var(--spectrum-global-color-gray-75);
  width: 100%;
}

@media screen and (max-width:1280px) {
  footer {
    max-width: none;
  }
}

footer > div {
  box-sizing: border-box;
  max-width: calc(12 * var(--spectrum-global-dimension-static-grid-fixed-max-width) / var(--spectrum-global-dimension-static-grid-columns)); 
  margin: 0 auto;
}

footer > div ul{
  list-style: none;
  padding: 0;
}

footer h3.spectrum-Heading--XS {
  position: absolute;
  white-space: nowrap;
}

footer > div ul.spectrum-Body--sizeS {
  padding-top: var(--spectrum-global-dimension-size-500);
}

footer > div ul.spectrum-Body--sizeS > li {
  margin-top: var(--spectrum-global-dimension-size-200);
}

footer > div ul.spectrum-Body--sizeS > li:first-of-type {
  margin-top: 0;
}

footer .footer-links-container-inner {
  display: grid;
  grid-template-areas: 'apis blogs support developer';
  grid-template-columns: 30% 22% 19%;
  gap: var(--spectrum-global-dimension-size-400);
}

@media screen and (max-width: 1280px) {
  footer .footer-links-container-inner {
    display: flex;
    flex-direction: column;
    padding: var(--spectrum-global-dimension-size-200);
    margin: 0 auto;
  }
}

footer .footer-divider {
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
}

footer .footer-apis {
  position: relative;
  grid-area: apis;
}

footer .footer-apis-container {
  display: flex;
}

@media screen and (max-width: 1280px) {
  footer .footer-apis-container {
    flex-direction: column;
  }

  footer .footer-apis-container > div{
    margin: 0;
  }
}

footer .footer-services-container {
  margin-left: var(--spectrum-global-dimension-size-400);
}

footer .footer-services-container ul {
  padding-top: var(--spectrum-global-dimension-size-750) !important;
}

footer .footer-community {
  position: relative;
  grid-area: blogs;
}

footer .footer-support {
  position: relative;
  grid-area: support;
}

footer .footer-legal {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: var(--spectrum-global-dimension-size-100);
}

footer .footer-legal ul {
  display: inline-flex;
  color: var(--spectrum-global-color-gray-700);
}

footer .footer-legal ul > li {
  margin-right: var(--spectrum-global-dimension-size-400);
}

@media screen and (max-width: 1280px) {
  footer .footer-legal {
    flex-direction: column;
    align-items: flex-start;
    padding: var(--spectrum-global-dimension-size-200);
    margin: 0 auto;
  }
}

footer .footer-date {
  color: var(--spectrum-global-color-gray-700);
}

@media screen and (max-width: 1280px) {
  footer .footer-date {
    display: block;
    margin-top: var(--spectrum-global-dimension-size-200);
  }
}

footer .footer-horizontal {
  margin-top: var(--spectrum-global-dimension-size-700);
}

.title-header {
  text-align: center;
  padding-bottom: 16px;
  padding-top: 60px;
}

.title-body {
  text-align: center;
  max-width: 900px;
  margin: 0 auto;
  padding-bottom: 60px;
}

.resource-cards-container {
  display: flex;
}

@media screen and (max-width: 1280px) {
  .resource-cards-container  {
    flex-wrap: wrap;
    flex-direction: column;
  }
}

.resource-cards-left {
  display: flex;
}

div.resource-cards-left > a.resource-card-large-container-inner {
  margin-right: 0 !important;
}

@media screen and (min-width: 1280px) {
  .resource-cards-left, .resource-cards-right {
    width: 50%
  }
}


.resource-cards-right {
  display: flex;
  flex-direction: column;
}

